--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
 
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>Hi, I'm John Ibitoye!</h2>
+        <div class="profImg">
+          <img src="./assets/img/profile-img.jpeg" alt="">
+        </div>
+        
         <p>Click here to find out more<br></p>
         <a href="#about" class="btn-scroll" title="Scroll Down"><i class="bi bi-chevron-down"></i></a>
       </div>
