--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Publications:</strong> <span>Researchgate(8+)</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Google Scholar:</strong> <span>John Oluwasegun Ibitoye (PhD)</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>WHO Certified:</strong> <span>Open Badge - Record of achievement</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Publications:</strong> <span><a href="https://www.researchgate.net/profile/Oluwasegun-Ibitoye" target="_blank">Researchgate(8+)</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Google Scholar:</strong> <span><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&hl=en&user=HxGrDiYAAAAJ" target="_blank">John Oluwasegun Ibitoye (PhD)</a></span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>WHO Certified:</strong> <span><a href="https://openwho.org/verify/xipaf-pyres-sykoh-deput-gifyb" target="_blank">Open Badge - Record of achievement</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BSc, MSc, MPH, PhD</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:e@gmail.com">email@example.com</a></span></li>
                 </ul>
               </div>
             </div>
