--- a/index.html
+++ b/index.html
@@ -152,18 +152,23 @@
               <h5>Dec 2021 - Present</h5>
               <p><em>Catholic Relief Services</em></p>
               <ul>
-                <li>Responsible for managing, strengthening, and providing strategic direction to the Nigeria Country Program Monitoring, Evaluation, Accountability & Learning(MEAL) system; ensuring cross-learning in MEAL among projects, building the capacity of MEAL staff, and supporting the roll-out and implementation of the MEAL policies and procedures (MPPs), and Global Results reporting. </li>
-                <li>Tasked with ensuring accountability and learning from projects are systematically captured and used throughout the country program.</li>
-                <li>Serves as the knowledge management focal person for the Nigeria Country Program and coordinates the implementation and maintenance of the country program learning agenda</li>
+                <li>Responsible for providing strategic direction and strengthening the MEAL (Monitoring, Evaluation, Accountability, and Learning) system across projects. Led the development of high-quality monitoring tools, ensured accountability, and facilitated cross-learning. Collaborated with program teams and senior leadership to ensure compliance with global MEAL standards, while fostering a culture of continuous learning and capacity building among staff. Coordinated the implementation of the country program’s learning agenda and supported the rollout of new MEAL policies and procedures.</li>
+              </ul>
+            </div>
+            <div class="resume-item pb-0">
+              <h4>Principal Partner, Monitoring Evaluation & Learning Lab (MELLAB®)</h4>
+              <h5>Dec 2021 - Present</h5>
+              <ul>
+                <li>Provide overall strategic leadership, guiding the firm’s growth and business development efforts. Oversee technical operations, ensuring high-quality service delivery and innovation in monitoring, evaluation, and learning (MEAL) practices. Spearhead client relations, drive new business opportunities, and lead the development of cutting-edge solutions tailored to diverse project needs</li>
               </ul>
             </div>
             <!-- Edn Resume Item -->
              <div class="resume-item pb-0">
-              <h4>Lead: Monitoring, Evaluation, & Learning(FCDO/UK Support for Health in Nigeria-LAFIYA)</h4>
+              <h4>MEL & Data for Delivery Lead, Palladium FCDO Lafiya Project</h4>
               <h5>Oct 2020 - Nov 2021</h5>
               <p><em>Palladium: Make It Possible</em></p>
               <ul>
-                <li>Providing technical leadership on the design and implementation of MEL and other related outputs(including Data for Delivery and Demographic Analysis)</li>
+                <li>Led the technical and budgetary management of LAFIYA’s output 2, enhancing the capacity of Nigeria’s government to generate and use health and demographic data for decision-making. Provided MEL leadership across consortium partners, achieving an A-rating in the FCDO Annual Program Review</li>
               </ul>
             </div>
 
