--- a/index.html
+++ b/index.html
@@ -455,6 +455,141 @@
       </section>
       <!-- /Resume Section -->
 
+      <section id="skills" class="skills section">
+
+      <!-- <div class="container section-title" data-aos="fade-up"> -->
+        <!-- <h2></h2> -->
+        <!-- <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p> -->
+      <!-- </div> -->
+      <!-- End Section Title -->
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row skills-content skills-animation">
+
+          <div class="col-lg-6">
+            <h2>Highlight of Skills</h2>
+            <div class="mt-4">
+              <ul>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Mixed Methods Research</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Qualitative Data Analysis</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Machine Learning</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Performance Monitoring & Evaluation</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Operational/Implementation Research</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Capacity Strengthening</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Technical Report Writing</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Leadership </span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Budget Preparation and Management</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Team Coaching and Supervision</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Project Execution</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Relationship Building and Management</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Interpersonal and Communication Skill  </span>
+                </li>
+              </ul>
+            </div>
+            <!-- End Skills Item -->
+
+          </div>
+
+          <div class="col-lg-6">
+            <h2>Highlight of Skills</h2>
+            <div class="mt-4">
+              <ul>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Monitoring, Evaluation, & Learning system design and rollout</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Needs assessment, research & project evaluation design and Implementation.</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Transcription of voice files and thematic analysis of qualitative data</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Literature review, including systematic review and meta-analysis.</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Quantitative data analysis including using machine learning techniques.</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Project database design and re-design</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Data Quality Assessments</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Technical report writing</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Independent Verification & Third-Party Monitoring Services</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Capacity building on Innovative MEAL Approaches, Data analysis, Data visualization</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Mentorship on MEAL Management & Leadership</span>
+                </li>
+              </ul>
+            </div>
+            <!-- End Skills Item -->
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+    <!-- /Skills Section -->
+
       <!-- Contact Section -->
       <section id="contact" class="contact section">
         <!-- Section Title -->
