--- a/index.html
+++ b/index.html
@@ -466,6 +466,59 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row skills-content skills-animation">
+          <div class="col-lg-6">
+            <h2>Summary of Services</h2>
+            <div class="mt-4">
+              <ul>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Monitoring, Evaluation, & Learning system design and rollout</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Needs assessment, research & project evaluation design and Implementation.</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Transcription of voice files and thematic analysis of qualitative data</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Literature review, including systematic review and meta-analysis.</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Quantitative data analysis including using machine learning techniques.</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Project database design and re-design</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Data Quality Assessments</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Technical report writing</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Independent Verification & Third-Party Monitoring Services</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Capacity building on Innovative MEAL Approaches, Data analysis, Data visualization</span>
+                </li>
+                <li style="list-style-type: none;">
+                  <i class="bi bi-chevron-right"></i>
+                  <span style="font-size: large;">Mentorship on MEAL Management & Leadership</span>
+                </li>
+              </ul>
+            </div>
+            <!-- End Skills Item -->
+
+          </div>
 
           <div class="col-lg-6">
             <h2>Highlight of Skills</h2>
@@ -529,59 +582,7 @@
 
           </div>
 
-          <div class="col-lg-6">
-            <h2>Highlight of Skills</h2>
-            <div class="mt-4">
-              <ul>
-                <li style="list-style-type: none;">
-                  <i class="bi bi-chevron-right"></i>
-                  <span style="font-size: large;">Monitoring, Evaluation, & Learning system design and rollout</span>
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="bi bi-chevron-right"></i>
-                  <span style="font-size: large;">Needs assessment, research & project evaluation design and Implementation.</span>
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="bi bi-chevron-right"></i>
-                  <span style="font-size: large;">Transcription of voice files and thematic analysis of qualitative data</span>
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="bi bi-chevron-right"></i>
-                  <span style="font-size: large;">Literature review, including systematic review and meta-analysis.</span>
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="bi bi-chevron-right"></i>
-                  <span style="font-size: large;">Quantitative data analysis including using machine learning techniques.</span>
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="bi bi-chevron-right"></i>
-                  <span style="font-size: large;">Project database design and re-design</span>
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="bi bi-chevron-right"></i>
-                  <span style="font-size: large;">Data Quality Assessments</span>
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="bi bi-chevron-right"></i>
-                  <span style="font-size: large;">Technical report writing</span>
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="bi bi-chevron-right"></i>
-                  <span style="font-size: large;">Independent Verification & Third-Party Monitoring Services</span>
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="bi bi-chevron-right"></i>
-                  <span style="font-size: large;">Capacity building on Innovative MEAL Approaches, Data analysis, Data visualization</span>
-                </li>
-                <li style="list-style-type: none;">
-                  <i class="bi bi-chevron-right"></i>
-                  <span style="font-size: large;">Mentorship on MEAL Management & Leadership</span>
-                </li>
-              </ul>
-            </div>
-            <!-- End Skills Item -->
-
-          </div>
+          
 
         </div>
 
