--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         >
           <h2>Hi, I'm John Ibitoye!</h2>
           <div class="profImg">
-            <img src="./assets/img/profile-img.jpeg" alt="" />
+            <img src="./assets/img/profile-img2.png" alt="" />
           </div>
 
           <p>Click here to find out more<br /></p>
