--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                       <strong>Email:</strong>
                       <span
                         ><a href="mailto:e@gmail.com"
-                          >email@example.com</a
+                          >olujohnolu@gmail.com</a
                         ></span
                       >
                     </li>
@@ -637,7 +637,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>info@gmail.com</p>
+                  <p>olujohnolu@gmail.com</p>
                 </div>
               </div>
               <!-- End Info Item -->
