--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>John Ibitoye</title>
+    <title>John Ibitoye, PhD</title>
     <meta name="description" content="" />
     <meta name="keywords" content="" />
 
@@ -55,7 +55,7 @@
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1 class="sitename">John Ibitoye</h1>
+          <h1 class="sitename">John Ibitoye, PhD</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -98,7 +98,7 @@
           data-aos="fade-up"
           data-aos-delay="100"
         >
-          <h2>Hi, I'm John Ibitoye!</h2>
+          <h2>Hi, I’m Dr John Ibitoye</h2>
           <div class="profImg">
             <img src="./assets/img/profile-img2.png" alt="" />
           </div>
@@ -126,11 +126,11 @@
               <img src="assets/img/profile-img.jpeg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 content">
-              <h2>John O. Ibitoye, MSc, MPH, PhD</h2>
+              <h2>John O. Ibitoye</h2>
               <p class="fst-italic py-3">
                 Program Design, Monitoring, Evaluation and Learning Leader |
                 Disease Surveillance & Research Specialist | Data Science
-                Enthusiast | Expert Volunteer @ MEL LAB
+                Enthusiast | Principal Partner @ MEL Lab
               </p>
               <div class="row">
                 <div class="col-lg-6">
@@ -716,11 +716,11 @@
         <h3 class="sitename">John Ibitoye</h3>
         <!-- <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> -->
         <div class="social-links d-flex justify-content-center">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
-          <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-skype"></i></a>
-          <a href=""><i class="bi bi-linkedin"></i></a>
+          <a href="https://x.com/RealOluJohn"><i class="bi bi-twitter-x"></i></a>
+          <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
+          <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
+          <!-- <a href=""><i class="bi bi-skype"></i></a> -->
+          <a href="https://www.linkedin.com/in/john-o-ibitoye/"><i class="bi bi-linkedin"></i></a>
         </div>
         <div class="container">
           <div class="copyright">
