--- a/index.html
+++ b/index.html
@@ -645,8 +645,7 @@
 
             <div class="col-lg-8">
               <form
-                action="forms/contact.php"
-                method="post"
+                netlify
                 class="php-email-form"
                 data-aos="fade-up"
                 data-aos-delay="200"
@@ -693,11 +692,11 @@
                   </div>
 
                   <div class="col-md-12 text-center">
-                    <div class="loading">Loading</div>
+                    <!-- <div class="loading">Loading</div>
                     <div class="error-message"></div>
                     <div class="sent-message">
                       Your message has been sent. Thank you!
-                    </div>
+                    </div> -->
 
                     <button type="submit">Send Message</button>
                   </div>
