--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>Yobe, Nigeria</p>
+                  <p>Mabushi, Abuja, Nigeria</p>
                 </div>
               </div>
               <!-- End Info Item -->
@@ -624,7 +624,7 @@
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Us</h3>
-                  <p>+234 818 554 5562</p>
+                  <p>+234 803 637 6140</p>
                 </div>
               </div>
               <!-- End Info Item -->
