--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
               <!-- <h3 class="resume-title">Professional Experience</h3> -->
 
               <div class="resume-item pb-0">
-                <h4>Sudan Emergency Project – Eastern Chad & West Darfur, Sudan</h4>
+                <h4>MEAL Lead - Sudan Emergency Project</h4>
                 <h5>Jan 2025 - Present</h5>
-                <p><em>Eastern Chad & West Darfur, Sudan</em></p>
+                <p><em>Sudan Emergency Project – Eastern Chad & West Darfur, Sudan</em></p>
                 <ul>
                   <li>
                    Serves as the MEAL and Program Quality Manager for Catholic Relief Services—Sudan Emergency Program, where he coordinates the design and rollout of a robust MEL system, a Feedback, Complaints & Response Mechanism, Safe and Dignified Programming initiatives, and ICT4D solutions for projects across Darfur. He manages program information systems to assure data quality and timely reporting, provides technical assistance on MEAL and knowledge management, and leads evaluations and assessments that drive learning and adaptation. He champions quality assurance and accurate donor reporting, initiates and stewards a portfolio-wide learning agenda, mentoring and trains members of the MEAL team.
@@ -229,7 +229,7 @@
 
               <div class="resume-item pb-0">
                 <h4>Country Program MEAL Coordinator, Nigeria.</h4>
-                <h5>Dec 2021 - Present</h5>
+                <h5>Dec 2021 - present</h5>
                 <p><em>Catholic Relief Services</em></p>
                 <ul>
                   <li>
